--- a/storage/Views/Storage/inde.cshtml
+++ b/storage/Views/Storage/inde.cshtml
@@ -262,7 +262,8 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             </div>	<!-- //header-ends -->
             <div id="page-wrapper" style="min-height:600px; min-width:1600px">
                <div class="main-page">
-                @Html.Partial("ss")
+                   @*@Html.Partial("ss")*@
+                 
                </div>
             </div>
             <button id="test"></button>
@@ -309,8 +310,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 
         //在下面打js代码每人设置的变量、名称前面加上自己名字的首字母
 
-
-        
+       
 
     });
 </script>
