--- a/storage/Views/Storage/inde.cshtml
+++ b/storage/Views/Storage/inde.cshtml
@@ -106,7 +106,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 </head>
 <body class="cbp-spmenu-push">
     <div class="main-content">
-        <div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+        <div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1" style="width:100%;">
             <!--left-fixed -navigation-->
             <aside class="sidebar-left">
                 <nav class="navbar navbar-inverse">
@@ -260,7 +260,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                 <div class="clearfix"></div>
 
             </div>	<!-- //header-ends -->
-            <div id="page-wrapper" style="min-height:680px;">
+            <div id="page-wrapper" style="        min-height: 680px;
+        width: 87%;
+        margin: 0 0 0 17em;">
                <div class="main-page">
                 
                </div>
@@ -293,6 +295,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 </body>
 </html>
 <script src="~/Scripts/jquery-3.4.1.js"></script>
+<script src="~/Scripts/layui/layui.js"></script>
 <script>
     $(function () {
 
