--- a/storage/Views/Storage/ss.cshtml
+++ b/storage/Views/Storage/ss.cshtml
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="~/Scripts/layui/css/layui.css" media="all">
+    <link rel="stylesheet" href="//res.layui.com/layui/dist/css/layui.css" media="all">
     <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
 <body>
@@ -27,7 +27,7 @@
     </script>
 
 
-    <script src="~/Scripts/layui/layui.all.js" charset="utf-8"></script>
+    <script src="//res.layui.com/layui/dist/layui.js" charset="utf-8"></script>
     <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
 
     <script>
@@ -58,7 +58,7 @@
                     , { field: 'sign', title: '签名' }
                     , { field: 'experience', title: '积分', width: 80, sort: true }
                     , { field: 'ip', title: 'IP', width: 120 }
-                    , { field: 'logins', title: '登入次数', width: 100, sort: true }
+                    , { field: 'logins', title: '登入次数', width: 100, sort: true } 
                     , { field: 'joinTime', title: '加入时间', width: 120 }
                     , { fixed: 'right', title: '操作', toolbar: '#barDemo', width: 150 }
                 ]]
