--- a/storage/Views/Storage/inde.cshtml
+++ b/storage/Views/Storage/inde.cshtml
@@ -23,6 +23,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 
     <!-- font-awesome icons CSS -->
     <link href="~/css/font-awesome.css" rel="stylesheet">
+    <link href="~/Scripts/layui/css/layui.css" rel="stylesheet" />
     <!-- //font-awesome icons CSS-->
     <!-- side nav css file -->
     <link href='~/css/SidebarNav.min.css' media='all' rel='stylesheet' type='text/css' />
@@ -47,9 +48,13 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             width: 100%;
             height: 295px;
         }
+        .widget {
+            width:100% !important;
+        }
     </style>
     <!--pie-chart --><!-- index page sales reviews visitors pie chart -->
     <script src="~/js/pie-chart.js" type="text/javascript"></script>
+
     <script type="text/javascript">
 
         $(document).ready(function () {
