--- a/storage/Views/Y/stock_management.cshtml
+++ b/storage/Views/Y/stock_management.cshtml
@@ -2,191 +2,237 @@
 
 <link href="~/Scripts/layui/css/layui.css" rel="stylesheet" />
 
-<table class="layui-hide" id="test" lay-filter="test"></table>
-
-
-<script type="text/html" id="toolbarDemo">
-    <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
-        <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
-        <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button>
+<div class="widget box light-grey">
+    <div class="widget-title">
+        <h4><i class="icon-globe"></i>入库单管理</h4>
+        <div class="tools">
+            <a href="javascript:;" class="collapse"></a>
+            <a href="#widget-config" data-toggle="modal" class="config"></a>
+            <a href="javascript:;" class="reload"></a>
+            <a href="javascript:;" class="remove"></a>
+        </div>
     </div>
-</script>
+    <div class="widget-body">
+        <div class="clearfix margin-bottom-10">
+            <div class="btn-group" id="btnStatusGroup">
+                <button class="btn disabled" value="0">所有</button>
+                <button class="btn" value="1">待审核</button>
+                <button class="btn" value="2">审核通过</button>
+                <button class="btn" value="3">审核失败</button>
+            </div>
+
+            <div class="actions  pull-right">
+                <a class="btn btn-primary" href="/InStorage/Product/Add"><i class="icon-pencil"></i>&nbsp;新增</a>
+                <a class="btn btn-danger" href="javascript:void(0)" onclick="InStorageManager.DeleteBatch()"><i class="icon-trash"></i>&nbsp;删除</a>
+                <a class="btn btn-info" href="javascript:void(0)" onclick="InStorageManager.ToExcel()"><i class="icon-download"></i>&nbsp;导出</a>
+            </div>
+        </div>
+
+        <div class="row-fluid">
+            
+                <div class="control-group">
+                    <div class="controls controls-cus">
+                        <input type="hidden" id="txtReprtNum" name="txtReportNum" value="InOrderPrint" />
+                        <input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入入库单号" />&nbsp;&nbsp;
+                        时间&nbsp;<input id="txtBeginTime" name="txtBeginTime" type="text" class="input-medium" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})" />
+                        -<input id="txtEndTime" name="txtEndTime" type="text" class="input-medium" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})" />&nbsp;&nbsp;
+                        <a id="gritter-remove-all" class="btn btn-info" href="javascript:void(0)" ><i class="icon-search"></i>&nbsp;搜索</a>
+                        <div class="btn-group">
+                            <button id="btnHSearch" data-toggle="dropdown" class="btn btn-primary dropdown-toggle">高级搜索 <span class="caret"></span></button>
+                        </div>
+                    </div>
+                </div>
+          
+        </div>
+
+        <div style=" transition: 1s !important;display:none;" id="a">
+            <form class="layui-form" action="">
+                <fieldset class="layui-elem-field">
+                    <legend>爱好</legend>
+                    <div class="layui-field-box">
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label">供应商</label>
+                                <div class="layui-input-inline">
+                                    <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+
+                            <div class="layui-inline">
+                                <label class="layui-form-label">供应商</label>
+                                <div class="layui-input-inline">
+                                    <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+
+                                <select name="quiz2" style="display:block;">
+                                    <option value="">请选择市</option>
+                                    <option value="杭州">杭州</option>
+                                    <option value="宁波" disabled="">宁波</option>
+                                    <option value="温州">温州</option>
+                                    <option value="温州">台州</option>
+                                    <option value="温州">绍兴</option>
+                                </select>
+                            </div>
+                            <button type="button" class="layui-btn layui-btn-normal">百搭按钮</button>
+                         
+                        </div>
+
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        
+
+        <table class="layui-hide" id="test" lay-filter="test"></table>
 
 
-<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+        <script type="text/html" id="toolbarDemo">
+            <div class="layui-btn-container">
+                <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
+                <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
+                <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button>
+            </div>
+        </script>
 
-@*<script src="//res.layui.com/layui/dist/layui.js" charset="utf-8"></script>*@
-<!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
 
+        <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+        <script src="~/Scripts/layui/layui.all.js"></script>
+  
+        @*<script src="//res.layui.com/layui/dist/layui.js" charset="utf-8"></script>*@
+        <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
+        <script>
 
-<script>
+            layui.use(['table','jquery'], function () {
+                var table = layui.table;
+                var $ = layui.jquery;
 
+                $("#btnHSearch").click(function () {
+                    $("#a").toggle();
+                })
 
-
-    layui.use('table', function () {
-        var table = layui.table;
-
-        table.render({
-            elem: '#test'
-            , url: '/Y/GetRuKu'
-            , title: '用户数据表'
-            , toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
-            , cols: [[
-                {
-                    type: 'checkbox',
-                    fixed: 'left'
-                },
-                {
-                    field: 'ID',
-                    title: 'ID',
-                    fixed: 'left'
-                },
-                {
-                    field: 'rkType',
-                    title: '用户名',
-                    edit: 'text',
-                    templet: function (res) {
-                        console.log(res)
-                        return "<button>" + res.rkType + "</button>"
+                var tableIns=table.render({
+                    elem: '#test'
+                    , url: '/Y/GetRuKu'
+                    , title: '用户数据表'
+                    , toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
+                    , where: {
+                        id:"0"
                     }
-                },
-                {
-                    field: 'rkSupplier ',
-                    title: '邮箱',
-                    width: 150
-                    //edit: 'text',
-                    //templet: function (res) {
-                    //    console.log(res.ID)
-                    //    return '<em>' + res.email + '</em>'
-                    //}
-                },
-                {
-                    field: 'Sum',
-                    title: '性别',
-                    width: 80,
-                    edit: 'text',
-                   // sort: true
-                },
-                {
-                    field: 'Price',
-                    title: '城市',
-                    width: 100
-                },
-                {
-                    field: 'Check1',
-                    title: '签名'
-                },
-                {
-                    field: 'CreateUser',
-                    title: '积分',
-                    width: 80,
-                    //sort: true
-                },
-                {
-                    field: 'CreateTime',
-                    title: '时间',
-                    width: 200
-                },
-                {
-                    fixed: 'right',
-                    title: '操作',
-                    width: 150
-                }
-            ]]
-            , page: true,
-            parseData: function (res) { //将原始数据解析成 table 组件所规定的数据
-                console.log(res)
-                return {
-                    "code": "0", //解析接口状态
-                    "msg": "", //解析提示文本
-                    "count": res.PageCount, //解析数据长度
-                    "data": res.DataList //解析数据列表
-                };
-            }
-        });
-        //头工具栏事件
-        table.on('toolbar(test)', function (obj) {
-            var checkStatus = table.checkStatus(obj.config.id);
-            switch (obj.event) {
-                case 'getCheckData':
-                    var data = checkStatus.data;
-                    layer.alert(JSON.stringify(data));
-                    break;
-                case 'getCheckLength':
-                    var data = checkStatus.data;
-                    layer.msg('选中了：' + data.length + ' 个');
-                    break;
-                case 'isAll':
-                    layer.msg(checkStatus.isAll ? '全选' : '未全选');
-                    break;
+                    , cols: [[
+                        {
+                            type: 'checkbox',
+                            fixed: 'left'
+                        },
+                        {
+                            field: 'ID',
+                            title: 'ID',
+                            fixed: 'left'
+                        },
+                        {
+                            field: 'rkType',
+                            title: '入库单号',
+                            edit: 'text',
+                            templet: function (res) {
+                                console.log(res)
+                                return "<button>" + res.rkType + "</button>"
+                            }
+                        },
+                        {
+                            field: 'rkSupplier ',
+                            title: '入库类型',
+                            width: 150
+                            //edit: 'text',
+                            //templet: function (res) {
+                            //    console.log(res.ID)
+                            //    return '<em>' + res.email + '</em>'
+                            //}
+                        },
+                        {
+                            field: 'Sum',
+                            title: '货品总数',
+                            width: 80,
+                            edit: 'text',
+                            // sort: true
+                        },
+                        {
+                            field: 'Price',
+                            title: '总金额',
+                            width: 100
+                        },
+                        {
+                            field: 'Check1',
+                            title: '签名'
+                        },
+                        {
+                            field: 'CreateUser',
+                            title: '制单人',
+                            width: 80,
+                            //sort: true
+                        },
+                        {
+                            field: 'CreateTime',
+                            title: '创建时间',
+                            width: 200
+                        },
+                        {
+                            fixed: 'right',
+                            title: '操作',
 
-                //自定义头工具栏右侧图标 - 提示
-                case 'LAYTABLE_TIPS':
-                    layer.alert('这是工具栏右侧自定义的一个图标按钮');
-                    break;
-            };
-        });
-    });
+                            width: 150
+                        }
+                    ]]
+                    , page: true,
+                    parseData: function (res) { //将原始数据解析成 table 组件所规定的数据
+                        console.log(res)
+                        return {
+                            "code": "0", //解析接口状态
+                            "msg": "", //解析提示文本
+                            "count": res.PageCount, //解析数据长度
+                            "data": res.DataList //解析数据列表
+                        };
+                    }
+                });
+                $("#gritter-remove-all").click(function () {
+                    tableIns.reload({
+                        where: { //设定异步数据接口的额外参数，任意设
+                            id: $("#txtOrderNum").val()
+                           
+                            //…
+                        }
+                        , page: {
+                            curr: 1 //重新从第 1 页开始
+                        }
+                    });
+                })
+              
+
+                //头工具栏事件
+                table.on('toolbar(test)', function (obj) {
+                    var checkStatus = table.checkStatus(obj.config.id);
+                    switch (obj.event) {
+                        case 'getCheckData':
+                            var data = checkStatus.data;
+                            layer.alert(JSON.stringify(data));
+                            break;
+                        case 'getCheckLength':
+                            var data = checkStatus.data;
+                            layer.msg('选中了：' + data.length + ' 个');
+                            break;
+                        case 'isAll':
+                            layer.msg(checkStatus.isAll ? '全选' : '未全选');
+                            break;
+
+                        //自定义头工具栏右侧图标 - 提示
+                        case 'LAYTABLE_TIPS':
+                            layer.alert('这是工具栏右侧自定义的一个图标按钮');
+                            break;
+                    };
+                });
+            });
 
 
 
-    $(function () {
-        var pageIndex = 1;
-        var pageSize = 1;
-        var pageCount = 0;
-        var rows = 0;
-
-
-
-
-
-
-        //function time(op) {
-        //    var dd = new Date(parseInt(op.substr(6)));
-        //    return dd.toLocaleDateString();
-        //}
-
-        //function PageList(pindex, psize) {
-        //    $.ajax({
-        //        type: "POST",
-        //        url: "/Y/GetRuKu",
-        //        data: "{pageIndex:" + pindex + ",pageSize:" + psize + "}",
-        //        dataType: "json",
-        //        contentType: "application/json",
-        //        success: function (result) {
-        //            //alert(result);
-        //            //获取总页数
-        //            //pageCount = result.PageCount;
-        //            //console.log(result);
-        //            $("#tb1 tr").remove();
-        //            console.log(result)
-        //            //$.each(result, function (index, data) {
-        //            //    $("#tb1").append("<tr><td>" + data.ID + "</td><td>" + data.rkType + "</td><td>" + data.rkSupplier + "</td><td>" + data.Sum + "</td><td>" + data.Price + "</td><td>" + data.Check1 + "</td><td>" + data.CreateUser + "</td><td>" + time(data.CreateTime) + "</td><td>" + data.Sum + "</td></tr>");
-
-        //            //});
-        //        },
-        //        error: function (ex) {
-        //            alert(ex.responseText);
-        //        }
-        //    });
-        //}
-
-        //function Count() {
-        //    $.ajax({
-        //        type: "POST",
-        //        url: "/Y/Count",
-        //        data: "{}",
-        //        dataType: "json",
-        //        contentType: "application/json",
-        //        success: function (result) {
-
-        //        },
-        //        error: function (ex) {
-        //            alert(ex.responseText);
-        //        }
-        //    });
-        //}
-        //PageList(1, 2);
-    });
-</script>
+        
+        </script>
