--- a/storage/Views/Storage/inde.cshtml
+++ b/storage/Views/Storage/inde.cshtml
@@ -14,7 +14,7 @@
     <meta name="keywords" content="Glance Design Dashboard Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-
+    <link  href="~/Scripts/bootstrap-3.3.7/dist/css/bootstrap.min.css"/>
     <!-- Bootstrap Core CSS -->
     <link href="~/css/bootstrap.css" rel='stylesheet' type='text/css' />
 
@@ -297,6 +297,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 </html>
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script src="~/Scripts/layui/layui.all.js"></script>
+<script src="~/Scripts/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
 <script>
     $(function () {
 
