--- a/storage/Views/Storage/inde.cshtml
+++ b/storage/Views/Storage/inde.cshtml
@@ -307,7 +307,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     $(function () {
 
         if ($("#SessionId").html() == "") {
-            window.location.href = "/Storage/login";
+            //window.location.href = "/Storage/login";
         }
         $("body").on("click", ".exit", function () {
             //layer.confirm("您确定要退出吗?", {
