--- a/storage/Views/Y/stock_management.cshtml
+++ b/storage/Views/Y/stock_management.cshtml
@@ -175,10 +175,10 @@
                         {
                             field: 'CreateTime',
                             title: '创建时间',
-                            width: 200
-                            //templet: function (val) {
-                                
-                                
+                            width: 200,
+                            //templet: function (d) {
+                            //    if (d)}{}
+                            //    return "12";
                             //}
                         },
                         {
