--- a/storage/Views/T/productType.cshtml
+++ b/storage/Views/T/productType.cshtml
@@ -1,1 +1,225 @@
-﻿<h1 style="color:red">此页面为产品类别分部视图</h1>
+﻿
+
+
+<link href="~/Scripts/layui/css/layui.css" rel="stylesheet" />
+
+<div class="widget box light-grey">
+    <div class="widget-title">
+        <h4><i class="icon-globe"></i>产品类别</h4>
+        <div class="tools">
+            <a href="javascript:;" class="collapse"></a>
+            <a href="#widget-config" data-toggle="modal" class="config"></a>
+            <a href="javascript:;" class="reload"></a>
+            <a href="javascript:;" class="remove"></a>
+        </div>
+    </div>
+    <div class="widget-body">
+
+
+        <div class="actions  pull-right">
+            <a class="btn btn-primary" href="/InStorage/Product/Add"><i class="icon-pencil"></i>&nbsp;新增</a>
+            <a class="btn btn-danger" href="javascript:void(0)" onclick="InStorageManager.DeleteBatch()"><i class="icon-trash"></i>&nbsp;删除</a>
+            <a class="btn btn-info" href="javascript:void(0)" onclick="InStorageManager.ToExcel()"><i class="icon-download"></i>&nbsp;导出</a>
+        </div>
+    </div>
+
+    <div class="row-fluid">
+
+        <div class="control-group">
+            <div class="controls controls-cus">
+                <input type="hidden" id="txtReprtNum" name="txtReportNum" value="InOrderPrint" />
+                序号:&nbsp;&nbsp;<input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别编号" />&nbsp;&nbsp;
+                产品名:&nbsp;&nbsp;<input id="txtOrderName" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别名称" />&nbsp;&nbsp;
+
+                <a id="gritter-remove-all" class="btn btn-info" href="javascript:void(0)"><i class="icon-search"></i>&nbsp;搜索</a>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div style=" transition: 1s !important;display:none;" id="a">
+        <form class="layui-form" action="">
+            <fieldset class="layui-elem-field">
+                <legend>爱好</legend>
+                <div class="layui-field-box">
+                    <div class="layui-form-item">
+                        <div class="layui-inline">
+                            <label class="layui-form-label">供应商</label>
+                            <div class="layui-input-inline">
+                                <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+
+                        <div class="layui-inline">
+                            <label class="layui-form-label">供应商</label>
+                            <div class="layui-input-inline">
+                                <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+
+                            <select name="quiz2" style="display:block;">
+                                <option value="">请选择市</option>
+                                <option value="杭州">杭州</option>
+                                <option value="宁波" disabled="">宁波</option>
+                                <option value="温州">温州</option>
+                                <option value="温州">台州</option>
+                                <option value="温州">绍兴</option>
+                            </select>
+                        </div>
+                        <button type="button" class="layui-btn layui-btn-normal">百搭按钮</button>
+
+                    </div>
+
+                </div>
+            </fieldset>
+        </form>
+    </div>
+
+
+    <table class="layui-hide" id="test" lay-filter="test"></table>
+
+
+    <script type="text/html" id="toolbarDemo">
+        <div class="layui-btn-container">
+            <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
+            <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
+            <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button>
+        </div>
+    </script>
+
+
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/layui/layui.all.js"></script>
+
+    @*<script src="//res.layui.com/layui/dist/layui.js" charset="utf-8"></script>*@
+    <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
+    <script>
+
+            layui.use(['table', 'jquery'], function () {
+                var table = layui.table;
+                var $ = layui.jquery;
+
+                $("#btnHSearch").click(function () {
+                    $("#a").toggle();
+                })
+
+                var tableIns = table.render({
+                    elem: '#test'
+                    , url: '/G/QueryType'
+                    , title: '用户数据表'
+                    , toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
+                    , where: {
+                        typeId:"0",
+                        typeName:""
+                    }
+                    , cols: [[
+                        {
+                            type: 'checkbox',
+                            fixed: 'left'
+                        },
+                        {
+                            field: 'TypeID',
+                            title: '序号',
+                            fixed: 'left'
+                        },
+                        {
+                            field: 'TypeName',
+                            title: '类别名称',
+                            edit: 'text',
+                            //templet: function (res) {
+                            //    console.log(res)
+                            //    return "<button>" + res.rkType + "</button>"
+                            //}
+                        },
+                        {
+                            field: 'UserName',
+                            title: '创建人',
+                            edit: 'text',
+                            //templet: function (res) {
+                            //    console.log(res)
+                            //    return "<button>" + res.rkType + "</button>"
+                            //}
+                        },
+                        {
+                            field: 'CreateTime',
+                            title: '创建时间',
+                            edit: 'text',
+                            //templet: function (res) {
+                            //    console.log(res)
+                            //    return "<button>" + res.rkType + "</button>"
+                            //}
+                        },
+                        {
+                            field: 'Remark',
+                            title: '备注',
+                            edit: 'text',
+                            //templet: function (res) {
+                            //    console.log(res)
+                            //    return "<button>" + res.rkType + "</button>"
+                            //}
+                        },
+                        {
+                            fixed: 'right',
+                            title: '操作',
+
+                            width: 150
+                        }
+                    ]]
+                    , page: true,
+                    parseData: function (res) { //将原始数据解析成 table 组件所规定的数据
+                        console.log(res)
+                        return {
+                            "code": "0", //解析接口状态
+                            "msg": "", //解析提示文本
+                            "count": res.PageCount, //解析数据长度
+                            "data": res.DataList //解析数据列表
+                        };
+                    }
+                });
+                $("#gritter-remove-all").on("click", function () {
+                    var typeId = $("#txtOrderNum").val();
+                    if (typeId == "") {
+                        typeId = 0;
+                    }
+                    tableIns.reload({
+                        where: { //设定异步数据接口的额外参数，任意设
+                            typeId: typeId,
+                            typeName: $("#txtOrderName").val()
+                            //…
+                        }
+                        , page: {
+                            curr: 1 //重新从第 1 页开始
+                        }
+                    });
+                });
+
+                //头工具栏事件
+                table.on('toolbar(test)', function (obj) {
+                    var checkStatus = table.checkStatus(obj.config.id);
+                    switch (obj.event) {
+                        case 'getCheckData':
+                            var data = checkStatus.data;
+                            layer.alert(JSON.stringify(data));
+                            break;
+                        case 'getCheckLength':
+                            var data = checkStatus.data;
+                            layer.msg('选中了：' + data.length + ' 个');
+                            break;
+                        case 'isAll':
+                            layer.msg(checkStatus.isAll ? '全选' : '未全选');
+                            break;
+
+                        //自定义头工具栏右侧图标 - 提示
+                        case 'LAYTABLE_TIPS':
+                            layer.alert('这是工具栏右侧自定义的一个图标按钮');
+                            break;
+                    };
+                });
+            });
+
+
+
+
+    </script>
