--- a/storage/Views/Storage/login.cshtml
+++ b/storage/Views/Storage/login.cshtml
@@ -49,7 +49,7 @@
                     password: $("[name='password']").val()
                 }, success(res) {
                     if (res == "1") {
-                        
+                        sessionStorage["Userid"] = $("[name='username']").val();
                         window.location.href = "/Storage/inde";
                         
                     } else {
